--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -20,10 +20,9 @@ padding-top: 4.5%;
 .img-container img{
 width: 175px;
 height: 250px;
-padding: 1%;
 margin: 0 auto;
-padding-right: 2%;
-padding-left: 5%;
+/* padding-right: 2%; */
+/* padding-left: 5%; */
 }
 
 .board video {
@@ -37,7 +36,7 @@ padding-left: 5%;
 
 .pricingMenu{
     padding-top: 6%;
-    padding-bottom: 30%;
+    /* padding-bottom: 15%; */
     text-align: center;
 }
 
@@ -45,6 +44,7 @@ padding-left: 5%;
     font-size: 46px;
     font-family: 'College Bold', bold;
     color: white;
+    margin: 0;
 }
 
 .menu-items{
@@ -53,12 +53,20 @@ padding-left: 5%;
     color: white;
 }
 
+.menu-description{
+    font-size: 20px;
+    font-family:'College Bold', bold;
+    color: white;
+    width: 85%;
+    padding-left: 15%;
+    text-align: center;
+}
+
 .pole {
     height: 400px;
-    width: 250px;
-    position: absolute;
+    width: 225px;
+    position: fixed;
     /* padding-top: 10%; */
-    margin-top: 8%;
 }
 
 .pole img {
@@ -80,4 +88,9 @@ padding-left: 5%;
     height: 100%;
     width: 100%;
     background-size: cover;
+}
+
+.picture2{
+    padding-left: 1.5%;
+    padding-right: 1.5%;
 }
