--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -17,11 +17,16 @@ padding-top: 4.5%;
     justify-content: center;
 }
 
+.img-container{
+    display: table;
+    padding-left: 4%;
+}
+
 .img-container img{
 width: 175px;
 height: 250px;
 margin: 0 auto;
-/* padding-right: 2%; */
+padding-right: 2%;
 /* padding-left: 5%; */
 }
 
@@ -30,13 +35,9 @@ margin: 0 auto;
     width: 20vw;
 }
 
-.row{
-    display: table;
-}
-
 .pricingMenu{
     padding-top: 6%;
-    /* padding-bottom: 15%; */
+    padding-bottom: 7%;
     text-align: center;
 }
 
@@ -59,6 +60,13 @@ margin: 0 auto;
     color: white;
     width: 85%;
     padding-left: 15%;
+    text-align: center;
+}
+
+.picture-description{
+    font-size: 20px;
+    font-family: 'College Bold', bold;
+    color: white;
     text-align: center;
 }
 
@@ -88,9 +96,4 @@ margin: 0 auto;
     height: 100%;
     width: 100%;
     background-size: cover;
-}
-
-.picture2{
-    padding-left: 1.5%;
-    padding-right: 1.5%;
 }
