--- a/src/components/ShowAppt/ShowAppt.css
+++ b/src/components/ShowAppt/ShowAppt.css
@@ -1,6 +1,13 @@
 .appt-container{
     border: 1px solid black;
-    width: 300px;
-    height: 200px;
+    width: 200px;
+    height: 125px;
+    padding-left: 3%;
+    background-color: rgba(255, 255, 153);
+}
 
+.appt-section{
+    margin-left: 2%;
+    margin-right: 2%; 
+    margin-bottom: 1%;   
 }
